druckreif bis adhāras anfang

--- a/bindu.tex
+++ b/bindu.tex
@@ -135,258 +135,220 @@ The third chapter contains a comparative analysis of the complex early modern yo
   translation[class="translation"],
   ]
   \begin{edition}
-    \begin{prose}[p12_03]
-      \noindent
- \note[type=source, labelb=_34b, labele=_34e, nosep]{cf. YSv (PT, p. 833): anantaparamānandasthānaṃ jñeyaṃ tadūrddhvataḥ (\textit{tadarddhataḥ} YK 1.278) | ūrddhvagatakalā tatra tasya dhyānād bhaved iti | iti siddhirājayogaṃ strīṇāṃ bhogaṃ mahāsukham | gītavādyavinodādi saśivaṃ varddhate kṣitau | dhyānaṃ nirantarañ cāsya puṇyapāpe sthire (\textit{sthirau } YK 1.280) na hi | nijarūpasya dṛṣṭiḥ syād dūrasyārthañ ca paśyati |}
- \note[type=source, labelb=_34b, labele=_34e, nosep]{cf. SSP 2.9 (Ed p. 32): navamam ākāśacakraṃ ṣodaśadalakamalam ūrdhvamukham | tanmadhye karṇikāyāṃ trikūṭākārāṃ tadūrdhvaśaktiṃ tāṃ paramaśūnyāṃ dhyāyet | tatraiva pūrṇagiripīṭhaṃ sarveṣṭasiddhipradaṃ bhavati |}
-  \note[type=analogia, labelb=_34b, labele=_34e, nosep]{cf. \citetitle{saubhagya}: navamamākāśacakram | tatra ṣoḍaśadalapadmam ūrdhvamukhaṃ tanmadhyakarṇikātrikūṭākāram | tanmadhye ūrdhvaśaktiḥ | tāṃ paśyan dhyāyet | tatraiva pūrṇagiripīṭhaṃ sarvecchāsiddhisādhanaṃ bhavati |}
-%---------------------
-%tadupari anaṃtaparamānandasya sthānam / \E
-%tadupari anaṃtaparamānandasya sthānaṃ   \P
-%tadupari anantaparamānaṃdasya sthānam / \N1
-%tadupari anantaparamānaṃdasya sthānam / \N2
-%tadupari anantaparamānaṃdasya sthānaṃ / \D 
-%tadupari anantaparamānaṃdasya sthānam vartate/ \B
-%tadupari anaṃtaparamānaṃdasya sthānam vartate/ \L
-%tadupari alakṣaparamānaṃdasya sthānam   \U1
-%tadupari alakṣaparamānaṃdasya sthānaṃ // \J
-%tadupari anaṃtaparamānaṃdasya sthānaṃ / \K1  
-%tadupari anaṃtaparamānaṃdasya sthānaṃ// U2
-%---------------------
-%Above that is the place of infinite supreme bliss.
-%---------------------
-tadupari
-\app{\lem[wit={ceteri}, alt={ananta°}]{ananta}\phantomsection\label{cakra9kala}\linelabel{_34b}
-  \rdg[wit={J,U1}]{alakṣa°}}paramānandasya
-\app{\lem[wit={ceteri}]{sthānam}
-  \rdg[wit={D,U2}]{stānaṃ}
-  \rdg[wit={B,L}]{sthānam vartate}}/      
-%---------------------
-%tatrordhvaśaktiḥ / \E
-%tatordhvaśaktiḥ \P
-%rdhaśakti ardhaśakti \B
-%rdhaśakti ardhaśakti \L
-%tatrordhvaśaktiḥ / \N1
-%tatra ūrdhva śaktiḥ / \D
-%tatra ūrdhva śaktiḥ / \K1
-%tata ūrdhva śaktir \J
-%tatra ūrdhva śakti / \N2
-%urdhvaśaktir         \U1
-%tatrordhvaśaktiḥ// \U2
-%---------------------
-%There above is \textit{śakti},
-%------------------------------
-\app{\lem[wit={E,K1,N1,U2}]{tatrordhvaśaktiḥ}
-  \rdg[wit={P}]{tatordhvaśaktiḥ}
-  \rdg[wit={U1}]{urdhvaśaktir}
-  \rdg[wit={D}]{tatra ūrdhva śaktiḥ}
-  \rdg[wit={J}]{tata ūrdhva śaktir}
-  \rdg[wit={N2}]{tatra ūrdhva śakti}
-  \rdg[wit={B,L}]{rdhaśakti ardhaśakti}}/
-%------------------------------
-%etādṛśī  saṃjñā   ekā kalā vartate / \E
-%ekādaśā  saṃjñā   ekā kalā vartate   \P
-%etādṛśī  saṃjñā   ekā kalā vartate /  \N1
-%etādṛśī  saṃjñā   ekā kalā varttate / \N2
-%etādṛsaṃ saṃjñā   ekā kalā vartate / \D
-%etādṛsa  saṃjñā   ekā kalā vartatte / \K1
-%etādṛsaṃ saṃjñākā//   ekā kalā vartate / \J
-%ekādaśā  saṃjñā   ekā kalā vartate / \B
-%ekādaśā  saṃjñā   ekā kalā vartate / \L
-%etādṛśī  saṃjñakā ekā kalā vartate /  \U1
-%etādṛśā  saṃjñā   ekā kalā vartate/ \U2 
-%---------------------
-%Being designated as such she is one single digit. 
-%------------------------------
-\app{\lem[wit={ceteri}]{etādṛśī}
-  \rdg[wit={U2}]{etādṛśā}
-  \rdg[wit={J}]{etādṛsa}
-  \rdg[wit={D}]{etādṛsaṃ}
-  \rdg[wit={B,L,P}]{ekādaśā}}\app{\lem[wit={ceteri}]{saṃjñā}
-  \rdg[wit={J,U1}]{saṃjñakā}}
-ekā kalā vartate/
-%------------------------------
-%asyāḥ  kalāyā   dhyānakāraṇāt     puruṣo yad icchati / \E
-%asyāḥ  kalāyā   dhyānakāraṇāt     puruṣo yad icchati ?Zeichen? \P
-%asyāḥ  kalāyā   dhyānakāraṇāt     puruṣo yad icchati  tad bhavati \N1
-%tasyāḥ kalāyāḥ  dhyānakāraṇāt     puruṣo yad icchati  tad bhavati \N2
-%asyāḥ  kalāyā   dhyānakāraṇā      puruṣo yad icchati  tad bhavati \D
-%asyāḥ  kalāyā   dhyānakāraṇāt//   puruṣo yad icchati  tad bhavati// cha //  \J
-%tasyāḥ  kalāyāḥ   dhyānakāraṇāt   puruṣo yad icchati  tad bhavati// \K1
-%asyāḥ  kalāyā   dhyānakāraṇāt /   puruṣo yad icchati / \B
-%asyāḥ  kalāyā   dhyānakāraṇāt /   puruṣo yad icchati / \L
-%asyā   kalāyā   dhyānakāraṇāt     puruṣo yad icchati tad bhavati vā \U1
-%asyāḥ  kalāyāḥ  dhyānakāraṇāt //  puruṣo yad icchati // \U2
-%---------------------
-%Due to the exercise of meditation on this part the person manifests whatever he wishes for.
-%------------------------------
-\app{\lem[wit={ceteri}]{asyāḥ}
-  \rdg[wit={U1}]{asyā}
-  \rdg[wit={K1,N2}]{tasyāḥ}}
-\app{\lem[wit={ceteri}]{kalāyā}
-  \rdg[wit={K1,N2,U2}]{kalāyāḥ}}
-\app{\lem[wit={ceteri}]{dhyānakāraṇāt}
-  \rdg[wit={D}]{dhyānakāraṇā}}
-puruṣo yad-icchati
-\app{\lem[wit={D,K1,N1,N2}, alt={tad bhavati}]{tad\skp{-}bhavati}
-  \rdg[wit={J}]{tad bhavati ||cha||}
-  \rdg[wit={U1}]{tad bhavati vā}
-  \rdg[wit={Y}]{\om}}/ 
-%------------------------------
-%tasya sukhabhogavataḥ / \E
-%tasya sukhabhogavataḥ \P
-%rājya-sukhabhogavataḥ \N1
-%rājya-sukhabhogavataḥ \N2
-%rājya-sukhabhogavṛtaḥ \D !!!
-%rājya-sukhabhogavṛtaḥ \K1
-%rājya-sukhabhogavataḥ \J (P7/34)
-%tasya-khaṃ bhogavataṃ / \B
-%tasya-sukhaṃ bhogavaṃtaṃ / \L
-%rājya-sukhabhogavataḥ \U1
-%tasya-sukhabhogavataḥ / \U2
-%---------------------
-%He is furnished with royal pleasure and enjoyment. 
-%------------------------------
-\note[type=testium, labelb=_35b, labele=_35e, nosep]{ \approx  \textit{Yogasaṃgraha} (IGNCA 30020 f. 4r. ll. 1-4): rājyasukhabhogavataḥ strī vilāsavataḥ saṃgītavinoda prekṣāvato pi sādhakasya śuklapakṣacaṃdravat pratidinaṃ tejaso vapuṣaś ca vṛddiḥ puṇyapāpasya śārbhāvaḥ nijasva rūpaprakāśasāmarthaṃ dūrasthapy arthasya samīpastham iva darśanaṃ ca bhavati | cha | tad uktaṃ tattvajñānapradīpikāyāṃ ||}
-\app{\lem[wit={J,N1,N2,U1}, alt={rājyasukhabhogavataḥ}]{rājyasukhabho:\\gavataḥ}\linelabel{_35b}
-  \rdg[wit={D,K1}]{rājyasukhabhogavṛtaḥ}
-  \rdg[wit={E,P,U2}]{tasya sukhabhogavataḥ}
-  \rdg[wit={B}]{tasya khaṃ bhogavataṃ}
-  \rdg[wit={L}]{tasya sukhaṃ bhogavaṃtaṃ}}
-%------------------------------
-%strīmadhye     vilāsavataḥ    saṃgītavilāsavataḥ vinodaprekṣāvataḥ        puruṣasya pratidinaṃ śuklapakṣe candrakalāvat   kalā     vardhate/   \E
-%strīmadhye     vilāsavataḥ    saṃgītavinodaprekṣāvataḥ              eva   puruṣasya pratidinaṃ śuklapakṣe candrakalāvat   kalā     vardhate /  \P
-%strīmadhye     vilāsavaṃtaṃ   saṃgītaṃ prekṣāvatāḥ //               evaṃ  puruṣasya pratidinaṃ śuklapakṣe caṃdrakalāvat / kalā     vartate /   \L
-%strīmadhye     vilāsavaṃtaṃ   saṃgītaṃ vinodavaṃtaṃ prekṣāvaṃtāḥ // eva   puruṣasya pratidinaṃ śuklapakṣe caṃdrakalāvat / kalā     vartate /   \B
-%strīmadhye     vilāsavataḥ    saṃgītavinodaprekṣyāvataḥ             evaṃ  puruṣasya pratidinaṃ śuklapakṣe candrakalā vṛddhivato?   vardhate / \N1
-%śrī strīmadhye vilāsavataḥ    saṃgītavinodaprekṣāvataḥ              evaṃ  puruṣasya pratidinaṃ śuklapakṣa candrakalā vṛddhi vaṃto  varttate /  \N2
-%strīmadhye     vilāsavataḥ // saṃgītavinodaprekṣyāvataḥ //          evaṃ  puruṣasya pratidinaṃ śuklapakṣe candrakalā vṛddhivato    vardhate / \D
-%strīmadhye     vilāsavataḥ    saṃgītavinodaprekṣyāvataḥ //          evaṃ  puruṣasya pratidinaṃ śuklapakṣe candrakalā vṛddhivata    vardhate / \K1
-%strīmadhye     vilāsavataḥ // saṃgītavinodaprekṣyāvataḥ //          evaṃ  puruṣasya pratidinaṃ śuklapakṣe candrakalā vṛddhivato    vartate // \J
-%strīmadhye     vilāśavataḥ    saṃgītavinodaprekṣyāvataḥ             eka   puruṣasya pratidinaṃ śuklapakṣe caṃdrakalā vṛddhir       varddhate / \U1
-%strīmadhye     vilāsavata     saṃgītavinodaprekṣāvata//             evaṃ  puruṣasya pratidinaṃ śuklapakṣe candrakalāvat   kalā     varttate/   \U2
-%---------------------
-%(Selbst) bei einem Menschen, der sich inmitten von Frauen vergnügt, (und) ein Musikvergnügen
-%ansieht, wächst täglich die Kraft (kalā = śakti?) wie die "kalā" (Phase) des Mondes in der hellen Monatshälfte.
-%The \textit{kalā} of a person grows daily, like the \textit{kalā} of the moon in the bright half of the month, even amusing oneself amongst women and watching a musical pleasure.
-%(Even) amusing oneself amongst women, and watching musical pleasures, the \textit{kāla} of the person grows daily like the \textit{kalā} of the moon in the bright half of the month. 
-%------------------------------
-\app{\lem[wit={ceteri}]{strīmadhye}
-  \rdg[wit={N2}]{śrī strīmadhye}}
-\app{\lem[wit={ceteri}]{vilāsavataḥ}
-  \rdg[wit={U2}]{vilāsavata°}
-  \rdg[wit={L,B}]{vilāsavaṃtaṃ}} 
-saṃgīta\app{\lem[wit={D,J,K1,N1,U1},alt={°vinodaprekṣyāvataḥ}]{vinodaprekṣyāvataḥ}
-  \rdg[wit={P,N2}]{°vinodaprekṣāvataḥ}
-  \rdg[wit={U2}]{°vinodaprekṣāvata}
-  \rdg[wit={B}]{°ṃ vinodavaṃtaṃ prekṣāvaṃtāḥ}
-  \rdg[wit={E}]{°vilāsavataḥ vinodaprekṣāvataḥ}
-  \rdg[wit={L}]{°ṃ prekṣāvatāḥ}}
- \app{\lem[wit={B,P}]{eva}
-  \rdg[wit={ceteri}]{evaṃ}
-  \rdg[wit={U1}]{eka}}
-puruṣasya pratidinaṃ śuklapakṣe
-candrakalā\app{\lem[wit={Y},alt={°vat kalā}]{vat kalā}
-  \rdg[wit={D,J,N1}]{vṛddhivato}
-  \rdg[wit={K1}]{vṛddhivata}
-  \rdg[wit={N2}]{vṛddhi vaṃto}
-  \rdg[wit={U1}]{vṛddhir}}
-\app{\lem[wit={D,E,P,N1,U1}]{vardhate}
-  \rdg[wit={ceteri}]{vartate}}/
-%------------------------------
-%puṇyapāpe  'sya śarīraṃ   na spṛśataḥ /    \E
-%\om                                     \P
-%puṇyapāpe  asya śarīrena     spṛśataḥ /      \N1
-%puṇyapāpe  asya śarīrena     spṛśataḥ /      \N2
-%puṇyapāpe  asya śarīrena     spṛśataḥ /      \D
-%puṇyapāpe  asya śarīrena     spṛśataḥ       \K1
-%puṇyapāpe  asya śarīrena     spṛśataḥ //      \J
-%puṇyapāpe  asya śarīrasya na spṛśataḥ // \B
-%puṇyapāpe  asya śarīrasya na spṛśataḥ // \L
-%puṇyapāpau asya śarīrena     spṛśāt         \U1
-%puṇyapāpe  asya śarīraṃ   na spṛśataḥ // \U2
-%---------------------
-%puṇyapāpe\varc{puṇyapāpe \edprint \lalchand \oxford \nepal \dehlia}{\om \pune} 'sya\varc{'sya \edprint}{asya \nepal \dehlia \oxford \lalchand \om \pune} śarīrasya\varc{śarīrasya \lalchand \oxford}{śarīraṃ \edprint śarīrena \nepal \dehlia \om \pune} na\varc{na \edprint \oxford \lalchand}{\om \nepal \dehlia \pune} spṛśataḥ\varc{spṛśataḥ \edprint \lalchand \oxford \nepal \dehlia}{\om \pune} /
-%---------------------
-%His body is not affected by merit and sin. 
-%------------------------------
-\app{\lem[wit={ceteri}]{puṇyapāpe}
-  \rdg[wit={U1}]{puṇyapāpau}
-\rdg[wit={P}]{\om}}\app{\lem[wit={E}]{'sya}
-  \rdg[wit={P}]{\om}
-  \rdg[wit={ceteri}]{asya}}  
-\app{\lem[wit={B,L},alt={śarīrasya}]{śarīrasya}
-  \rdg[wit={X}]{śarīrena}
-  \rdg[wit={E,U2}]{śarīraṃ}
-  \rdg[wit={P}]{\om}}
-\app{\lem[wit={B,E,L,U2}]{na}
-  \rdg[wit={X,P}]{\om}}
-\app{\lem[wit={ceteri},alt={°śataḥ}]{spṛśataḥ}
-  \rdg[wit={U1}]{spṛśāt}}/
-%------------------------------
-%                          nirantaradhyānakaraṇāt     nijasvarūpaṃ prakāśanasāmarthyaṃ bhavati / \E
-%                          \om until .....            nijasvarūpaprakāśasāmarthyaṃ     bhavati / \P
-%                          niraṃtaraṃ dhyānakaraṇāt   nijasvarūpaprakāśasāmarthyaṃ     bhavati / \B
-%                          niraṃtaraṃ dhyānakaraṇāt// nijasvarūpaprakāśasāmarthyaṃ     bhavati / \L
-%                          nirantaradhyānakaraṇāt /   nijasvarūpaprakāśasāmarthyaṃ     bhavati / \N1 <-----
-%                          niraṃtaradhyānakaraṇāt /   nijasvarūpaprakāśasāmarthyaṃ     bhavati // \N2
-%                          nirantaradhyānakaraṇāt /   nijasvarūpaprakāśasāmarthyaṃ     bhavati / \D
-%                          nirantaradhyānakaraṇāt /   nijasvarūpaprakāśasāmarthyaṃ     bhavati // \J
-%                          nirantaradhyānakaraṇāt //  nijasvarūpaprakāśasāmarthyaṃ     bhavati // \K1
-%                          nirantaradhyānakaraṇāt /   nijasvarūpaprakāśasāmarthyaṃ     bhavati    \U1
-%evaṃ puruṣasya pratidinaṃ niraṃtaraṃ dhyānakaraṇāt   nijasvarūpaṃ prakāśanasāmarthyaṃ bhavati// \U2 
-%---------------------
-%Due to uninterrupted meditation the power of the light of the innate nature arises. 
-%------------------------------
-\app{\lem[type=emendation, resp=egoscr, alt={nirantaradhyānakaraṇān}]{nirantaradhyānaka:\\raṇā\skp{n-ni}}
-  \rdg[wit={E,X}]{nirantaradhyānakaraṇāt}
-  \rdg[wit={B,L}]{niraṃtaraṃ dhyānakaraṇāt}
-  \rdg[wit={U2}]{evaṃ puruṣasya pratidinaṃ niraṃtaraṃ dhyānakaraṇāt}
-  \rdg[wit={P}]{\om}
-}\skm{n-ni}jasvarūpa\app{\lem[wit={ceteri},alt={°prakāśa°}]{prakāśa}
-  \rdg[wit={E,U2}]{°ṃ prakāśana°}
-}sāmarthyaṃ bhavati/
-%------------------------------
-%dūrasthopi ca dūrasthavastu                   samīpa iva   paśyati // \E
-%dūrasthamapi                                  samīpam iva  paśyati // \N1
-%dūrasthamapi                                  samīpaṃ iva  paśyati // \N2
-%dūrasthamapy-arthaṃ                           samīpa iva   paśyati // \D
-%dūrasthamapy-arthaṃ                           samīpa iva   paśyati // \K1
-%dūrasthamapy arthaṃ                           samīpam eva   paśyati // \J
-%dūrasthamapi padārthaṃ                        samīpa iva   paśyati // \B
-%dūrasthamapi parārthaṃ                        samīpa iva   paśyati // \L
-%dūrasthamapi padārthaṃ                        samīpa iva   paśyati // \P
-%dūrasthamapy-arthaṃ                           samīpam eva  paśyati // \U1
-%dūrasthamapi bhavati //dūrasthamapi padārthaṃ samīpa iva   paśyati // \U2
-%------------------------------
-%dūrasthamapyarthaṃ\varc{dūrasthamapyarthaṃ \dehlia}{dūrasthamapi padārthaṃ \oxford \pune durasthamapi parārthaṃ \lalchand sūrastamapi \nepal ca dūrasthavastu \edprint} samīpa\varc{samīpa \dehlia \edprint \lalchand \oxford \pune}{samīpam \nepal} iva paśyati //
-%------------------------------
-%He sees remotely located objects as if they'd be near.
-%------------------------------
-dūra\app{\lem[wit={D,J,K1,U1},alt={°stham apy arthaṃ}]{stham-apy-arthaṃ}
-  \rdg[wit={B,P}]{°stham api padārthaṃ}
-  \rdg[wit={L}]{°stham api parārthaṃ}
-  \rdg[wit={E}]{°sthopi ca dūrasthavastu}
-  \rdg[wit={N1,N2}]{°stham api}
-  \rdg[wit={U2}]{°stham api bhavati || dūrastham api padārthaṃ}}
-\app{\lem[wit={ceteri}]{samīpa}
-  \rdg[wit={J,N1,U1}]{samīpam}
-  \rdg[wit={N2}]{samīpaṃ}}
-\app{\lem[wit={ceteri}]{iva}
-  \rdg[wit={J,U1}]{eva}} 
-paśyati\dd{}\linelabel{_34e}\linelabel{_35e}
-\phantomsection\label{cakra9end}
-    \end{prose}
+    \ekddiv{
+      head={[\uproman{30}. \textbf{ādhāracakrasya bhedāḥ}]},
+      type=section,
+      depth=2, 
+      n=XXX
+    }
+    \xmlhead[h30]{[XXX. ādhāracakrasya bhedāḥ]}
+    \phantomsection
+    \addcontentsline{toc}{section}{XXX. ādhāracakrasya bhedāḥ}
+ \begin{prose}[p30_01]
+   \noindent
+%-----------------------------
+%idānīm ādhāracakrasya bhedāḥ kathyanta/   \E
+%idānīm ādhāracakrasya bhedaḥ kathyate     \P
+%idānīm ādhāracakrasya bhedā  kathyaṃte/    \B DSCN7165.jpg Z.3
+%idānīm ādhāracakrasya bhedā  kathyaṃte//   \L
+%idānīm ādhāracakrasya bhedaḥ kathyate/    \N1
+%idānīṃ ādhāracakrasya bhedaḥ kathyate//   \D
+%idānīṃ ādhāracakrasya bhedaḥ kathyate//   \K1
+%idānīṃ ādhāracakrasya bhedāḥ kathyate//   \J   
+%idānī  ādhāracakrasya bhedaḥ kathyaṃte/   \N2
+%idānīṃ ādhāracakrasya bhedāḥ kathyaṃte    \U1
+%idānīṃ ādhāracakrasya bhedāḥ kathyaṃte // \U2
+%-----------------------------
+%Now the divisions of the totality of container [for concentration] are taught.
+%-----------------------------
+   \note[type=source, labelb=_75b, labele=_75e, nosep]{cf. YSv (PT, p. 839) = YK 2.15: ṣoḍaśādhārabhedan tu śṛṇu devi viśeṣataḥ |}
+   \note[type=source, labelb=_75b, labele=_75e, nosep]{cf. SSP 2.10 (Ed. p. 32): atha ṣoḍaśādhārāḥ kathyante |}
+   \note[type=testium, labelb=_75b, labele=_75e, nosep]{cf. \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98r ll. 3-4): ity ādhārāḥ ṣodaśayaṃ athoktānāṃ ṣoḍaśādhārāṇāṃ kartavyatām āha |}
+\app{\lem[wit={ceteri}, alt={idānīm}]{idānī\skp{m-ā}}\linelabel{_75b}
+  \rdg[wit={N2}]{idānī}
+}\skm{m-ā}dhāracakrasya
+\app{\lem[wit={ceteri}]{bhedāḥ}
+  \rdg[wit={B,L}]{bhedā}}
+\app{\lem[wit={ceteri}]{kathyante}
+  \rdg[wit={E}]{kathyanta}
+  \rdg[wit={D,N1}]{kathyate}}/\linelabel{_75e}
+%-----------------------------
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati/ \E
+%pādayor aṃguṣṭhe  tejaso  lakṣyakaraṇāt              dṛṣṭiḥ sthirā bhavati  \P
+%pādayor aṃguṣṭhai tejasaṃ lakṣaṃ kartavyaṃ kāraṇāt// dṛṣṭiḥ sthirā bhavati/ \B
+%pādayor aṃguṣṭhe  tejasaṃ lakṣaṃ karttavyaṃ kāraṇāt  dṛṣṭiḥ sthirā bhavatī/ \L
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati/ \N1
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati \D
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt//            dṛṣṭiḥ sthirā bhavati \K1
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭiḥ sthirā bhavati// \J
+%pādayor aṃguṣṭhe  tejaso  lakṣakāraṇāt               dṛṣṭisthirā   bhavati/ \N2
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati \U1
+%pādayor aṃguṣṭhe  tejaso  lakṣyakāraṇāt              dṛṣṭisthirā   bhavati// \U2 %%%415.jpg
+%-----------------------------
+%From the execution of the fixation onto the light at the big toe of the feet stability of the gaze arises.
+%-----------------------------
+\note[type=source, labelb=_76b, labele=_76e, nosep]{cf. YSv (PT, p. 839): aṅguṣṭhapādayos tejaḥ salakṣasthiradṛṣṭimān | pādāṅguṣṭhe ya ādhāraḥ prathamo (\textit{prathamaṃ} YK 2.16) yogatattvataḥ |}
+\note[type=source, labelb=_76b, labele=_76e, nosep]{cf. SSP 2.10 (Ed. p. 32): tatra prathamaḥ pādāṅguṣṭhādhāraḥ | tatrāgratas tejomayaṃ dhyāyet | dṛṣṭiḥ sthirā bhavati |}
+\note[type=testium, labelb=_76b, labele=_76e, nosep]{ \approx  \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98r l. 4): tatra mūlādhāraḥ 1 pādayor aṃguṣṭhe tejaso lakṣyakaraṇād dṛṣṭiḥ sthirā bhavati 2 ity ādhāracakraṃ |}
+pādayo\skp{r-aṃ}\app{\lem[wit={ceteri}, alt={aṅguṣṭhe}]{\skm{r-aṅ}guṣṭhe}\linelabel{_76b}
+  \rdg[wit={B}]{aṃguṣṭhai}}
+\app{\lem[wit={ceteri}]{tejaso}
+  \rdg[wit={B,L}]{tejasaṃ}}
+\app{\lem[wit={ceteri}, alt={lakṣya°}]{lakṣya}
+  \rdg[wit={N2}]{lakṣa°}
+  \rdg[wit={B,L}]{lakṣaṃ kartavyaṃ}
+}\app{\lem[wit={ceteri}, alt={°kāraṇād}]{kāraṇā\skp{d-dṛ}}
+    \rdg[wit={P}]{°karaṇāt}
+  }\app{\lem[wit={ceteri}, alt={dṛṣṭiḥ}]{\skm{d-dṛ}ṣṭiḥ}
+   \rdg[wit={N1,N2,U1,U2}]{dṛṣṭi°}} sthirā
+ \app{\lem[wit={ceteri}]{bhavati}
+   \rdg[wit={L}]{bhavatī}}/\linelabel{_76e}
+%-----------------------------
+%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle parapādasya  pārṣṇiḥ                                         sthāpyate tadāgniḥ prabalo bhavati/ \E
+%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle 'parapādasya dhāraḥ pādāṃduṣṭhasya mūleḥ parapādasya pārṣṇiḥ sthāpyate tadāgniḥ prabalo bhavati \P
+%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle aparasya pādapārṣṇiḥ                                         syāpyate tadāgniḥ  prabalo bhavatī/ \B
+%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle aparasya pādapārṣṇīḥ                                         syāpyate tadāgniḥ  prabalo bhavatī/ \L
+%dvitīyo mūlādhāraḥ/  pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agniḥ    prabalo bhavati/   \N1
+%dvitīyo mūlādhāraḥ// pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agni-----prabalo bhavati//   \D  %%%p.12 recto
+%dvitīyo mūlādhāraḥ// pādāṃguṣṭhasya mūle aparapādasya pārṣṇi                                         sthāpyate agni-----prabalo bhavati//   \K1
+%dvitīyo mūlādhāraḥ pādāṃguṣṭhasya mūle adharapādasya pārṣṇiḥ                                         sthāpyate// agniprabalo bhavati//   \J 
+%dvitīyo mūlādhāraḥ   pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate/ \om                     \N2
+%dvitīyo mūlādharaḥ   pādāṃguṣṭhasya mūle aparapādasya pārṣṇiḥ                                         sthāpyate agniṃ ---prabalo bhavati    \U1
+%dvitīyo mūlādhare    pādāṃguṣṭhasya mūle 'parapādasya pārṣṇiḥ                                         sthāyyaṃte//                       \U2
+%-----------------------------
+%The second root-container is the second [one]. The heel of the other foot is caused to be placed at the root of the big toe. As a result the fire is strengthened. 
+%-----------------------------
+ \note[type=source, labelb=_77b, labele=_77e, nosep]{cf. YSv (PT, p. 839): dvitīyaṃ pādamūlan tu pādamūlaparaṃ (\textit{pādamūlaṃ paraṃ} YK 2.16) sa vai | pādasya pārṣṇī (\textit{pārṣṇi} YK 2.17a) saṃsthāpya balavān prabhaven muniḥ | pādamūle 'thavā pādāṅguṣṭhamūlaṃ (\textit{pṛṣṭhe pādāṅguṣṭhe} YK 2.17) vidhārayet ||}%The second is the root of the foot. That root of the foot is truly superior. Having placed himself on the heel of the foot the Muni becomes powerful. He shall hold [the gaze?] at the root of the foot or at the big toe.
+ \note[type=source, labelb=_77b, labele=_77e, nosep]{cf. SSP 2.11 (Ed. p. 33): dvitīyo mūlādhāras taṃ vāmapādapārṣṇinā niṣpīḍya sthātavyam | tatrāgnidīpanaṃ bhavati |}
+ \note[type=testium, labelb=_77b, labele=_77e, nosep]{ \approx  \citetitle{hathasamketacandrikajodhpur} (MMPP 2244 f. 98 ll. 5-7): atha dvitīyādhāraḥ | tatra tatra vāmapādāṃguṣṭasya mūlam aparapādasya pārṣṇis tasmin sthāpyate | tad āgneḥ pradīpanaṃ bhavati | ekaḥ pārṣṇi mūlādhāre dṛḍhaṃ sthāypyate | tasya pādasya mūla aṃguṣṭamūlam aparasya pādasya pārṣṇinā saṃpīḍya ciraṃ sthiraṃ sthīyate tadāgnīm agni dīpyate | iti dvitīyadhāraḥ |}
+ %The second is the Mūlādhara which is to be pressend with the left heel. This enhances the bodily fire.
+dvitīyo \linelabel{_77b}
+\app{\lem[wit={ceteri}]{mūlādhāraḥ}
+  \rdg[wit={U1}]{mūlādharaḥ}
+  \rdg[wit={U2}]{mūlādhare}}/ 
+pādāṅguṣṭhasya mūle\app{\lem[wit={ceteri},alt={'para°}]{'para}
+  \rdg[wit={D,K1,N1,N2,U1}]{apara°}
+  \rdg[wit={B,L}]{aparasya}
+  \rdg[wit={J}]{adhara°}
+}\app{\lem[wit={ceteri}]{pādasya}
+  \rdg[wit={B,L}]{pāda°}}
+\app{\lem[wit={ceteri}]{pārṣṇiḥ}
+  \rdg[wit={L}]{°pārṣṇīḥ}
+  \rdg[wit={K1}]{pārṣṇi}
+  \rdg[wit={P}]{dhāraḥ pādāṃduṣṭhasya mūleḥ parapādasya pārṣṇiḥ}}
+\app{\lem[wit={ceteri}]{sthāpyate}
+  \rdg[wit={B,L}]{syāpyate}
+  \rdg[wit={U2}]{sthāyyaṃte}}/
+\app{\lem[wit={N1}]{agniḥ}
+  \rdg[wit={U1}]{agniṃ}
+  \rdg[wit={D,J,K1,}]{agni°}
+  \rdg[wit={B,E,L,P}]{tadāgniḥ}
+  \rdg[wit={N2,U2}]{\om}}
+\app{\lem[wit={ceteri}]{prabalo}
+  \rdg[wit={N2,U2}]{\om}}
+\app{\lem[wit={ceteri}]{bhavati}
+  \rdg[wit={B,L}]{bhavatī}
+  \rdg[wit={N2,U2}]{\om}}/
+%-----------------------------
+%ekaḥ  pārṣṇir ādau  mūlādhāre  sthāpyate/      \E [P.41]
+%ekā   pārṣṇir ādau  mūlādhāre  sthāpyate      \P
+%ekā   pārṣṇir ādau  mūlādhāra  sthāpyate      \B
+%ekā   pārṣṇir ādau  mūlādhārā  sthāpyate      \L
+%ekā   pārṣṇiḥ       mūladdhāre sthāpyate/      \N1
+%ekā   pārṣṇiḥ       mūlādhārai sthāpyate//     \D
+%ekā   pārṣṇiḥ       mūlādhārai sthāpyate//     \K1
+%ekaḥ  pārṣṇiḥ       mūlādhāraṃ sthāpyate// \J 
+% \om -------------------------------------     \N2
+%ekāṃ pārṣṇir        mūlādhāra sthāpyate        \U1
+% \om                                          \U2
+%-----------------------------
+%One heel is caused to be placed at the Root-container. 
+%-----------------------------
+\app{\lem[wit={ceteri}]{ekā}
+  \rdg[wit={E}]{ekaḥ}
+  \rdg[wit={U1}]{ekāṃ}
+  \rdg[wit={N2,U2}]{\om}}
+\app{\lem[wit={U1},alt={pārṣṇiḥ}]{pārṣṇi\skp{r-mū}}
+  \rdg[wit={D,K,K1,N1}]{pārṣṇiḥ}
+  \rdg[wit={B,E,L,P}]{pārṣṇir ādau}
+    \rdg[wit={N2,U2}]{\om}
+}\app{\lem[wit={ceteri},alt={mūlādhāre}]{\skm{r-mū}lādhāre}
+a  \rdg[wit={B,U1}]{mūlādhāra}
+  \rdg[wit={L}]{mūlādhārā}
+  \rdg[wit={D,K1}]{mūlādhārai}
+  \rdg[wit={J}]{mūlādhāraṃ}
+    \rdg[wit={N2,U2}]{\om}}
+\app{\lem[wit={ceteri}]{sthāpyate}
+    \rdg[wit={N2,U2}]{\om}}/
+%-----------------------------
+% tasya pādasyāṃguṣṭhamūle      parasya  pādasya pārṣṇiḥ sthāpyate// tadagniḥ pradīpyate//  \E [P.41]
+% tasya pādasyāṃguṣṭhamūle     'parasya  pādasya pārṣṇiḥ sthāpyate   tadagnīḥ pradipyate    \P
+% tasya pādasyāṃguṣṭhamūle     aparasya  pādasya pārṣṇiḥ sthāpyate// tadagnīḥ pradipyate//  \B
+% tasya pādasyāṃguṣṭhamūle     aparasya  pādasya pārṣṇiḥ sthāpyate// tadāgnīḥ pradivyate//  \L
+% tasya pādasya aṃguṣṭhamūlaṃ/ aparasya  pādasya pārṣṇiḥ sthāpyaṃ       agnir    dāpyate?!/ \N1
+% tasya pādasyāṃguṣṭhamūle//   aparasya  pādasya pārṣṇiḥ sthāpyaṃ//     agnir    dīpyate//  \D
+% tasya pādasyāṃguṣṭhamūlaṃ//  aparasya  pādasya pārṣṇiḥ sthāpyaṃ     agnir    dīpyate//  \K1
+% tasya pādasya aṃguṣṭhamūlaṃ   aparasya          pārṣṇi  sthāpyate//          akṣipyate//    \J  
+% tasya pādasyāṃguṣṭhamūle//   aparasya  pādasya pārṇi---sthāpyaṃ       agni     dīpate//   \N2
+% tasya pādasya aṃguṣṭhamūlaṃ  aparasya          pārṣṇo  sthāpyate      agni     dīpyate    \U1
+% \om                                                                tadagnīḥ pradipyate//  \U2
+%-----------------------------
+%The heel of the other foot is caused to be placed at the root of the big toe of this foot. The fire is kindled. 
+%-----------------------------
+\app{\lem[wit={ceteri}]{tasya}
+  \rdg[wit={U2}]{\om}} 
+\app{\lem[wit={ceteri}]{pādasyāṅguṣṭhamūle}
+  \rdg[wit={N1,J,U1}]{pādasya aṃguṣṭhamūlaṃ}
+  \rdg[wit={U2}]{\om}
+}-\app{\lem[wit={E,P}]{'parasya}
+  \rdg[wit={ceteri}]{aparasya}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[wit={ceteri}]{pādasya}
+  \rdg[wit={J,U1,U2}]{\om}}
+\app{\lem[wit={ceteri}]{pārṣṇiḥ}
+  \rdg[wit={J}]{pārṣṇi}
+  \rdg[wit={N2}]{pārṇi}
+  \rdg[wit={U1}]{pārṣṇo}
+  \rdg[wit={U2}]{\om}}
+\app{\lem[wit={ceteri}]{sthāpyate}
+  \rdg[wit={D,K1,N1,N2}]{sthāpyaṃ}
+  \rdg[wit={U2}]{\om}}/
+\app{\lem[wit={D,K1,N1}, alt={agnir}]{agni\skp{r-pra}}
+   \rdg[wit={N2,U1}]{agni}
+  \rdg[wit={E}]{tadagniḥ}
+  \rdg[wit={B,P,U2}]{tadagnīḥ}
+  \rdg[wit={L}]{tadāgniḥ}
+  \rdg[wit={J}]{\om}
+}\app{\lem[wit={E}, alt={pradīpyate}]{\skm{r-pra}dīpyate}
+  \rdg[wit={B,L,P,U2}]{pradipyate}
+  \rdg[wit={D,U1}]{dīpyate}
+  \rdg[wit={N1}]{dāpyate}
+  \rdg[wit={N2}]{dīpate}
+  \rdg[wit={J}]{akṣipyate}}/\linelabel{_77e}
+\end{prose}
   \end{edition}
   \begin{translation}
-    \begin{tlate}[p12_03]
+    \ekddiv{
+      head={[\uproman{30}. \textbf{Divisions of the wheels of support}]},
+      type=section,
+      depth=2, 
+      n=XXX.1
+    }
+    \xmlhead[h30]{[XXX. Divisions of the wheels of support]}
+    \begin{tlate}[p30_01]
       \noindent
-      Above that is the place of infinite supreme bliss. In that [place], there exists the upper power (\textit{ūrdhvaśakti})\footnote{Examining the primary source for the composition of Rāmacandra's account of the ninth \textit{cakra}, found in the \emph{Yogasvarodaya} (cf. sources), one might infer that the term \textit{ūrdhvaśakti} is a corruption of the term \textit{tadūrddhvataḥ}. However, the term and concept are validated by its occurrence in \emph{Siddhasiddhāntapaddhati} 2.9 (cf. sources), which Rāmacandra must have consulted as well. The association of \textit{ūrdhvaśakti} with a \textit{kalā} is likely an innovation by Rāmacandra, as the \textit{ūrdhvaśakti} of the \emph{Siddhasiddhāntapaddhati}  is not explicitly identified as a \textit{kalā}. Moreover, the \textit{kalā} mentioned in the YSv is not designated as a \textit{śakti}. Rāmacandra, therefore, amalgamates assertions from both sources in his interpretation.} as a unique digit which has such a designation. As a result of meditation on this digit, whatever the person wants arises. Even though [one is] enjoying royal pleasures, amusing oneself amongst women and watching musical performances, the person's digit grows daily like the digit of the moon in the bright half of the month. His body is not affected by merit and sin. As a result of uninterrupted meditation [onto this digit], the ability to illuminate one's own nature arises. He sees even remote objects as if they were near.\footnote{The final testimony from \textit{Yogasaṃgraha} IGNCA 30020 references its source as \textit{Tattvajñānapradīpikā} (cf. testimonia). After that, the manuscript paraphrases and quotes other yoga texts such as the \emph{Uttaragītā}.}
-\flushpage 
-      \end{tlate}
-    \end{translation}
-  \end{alignment}
-  \pagebreak % after pp. 39-40
+      Now, the divisions of the group\footnote{I took \textit{cakra} in the sense of ``group, crowd, totality'', cf. \citeauthor[1958 (Vol. 2): 209]{petersburger}.} of supports\footnote{The practice of sixteen \textit{ādhāra}s goes back to the yoga traditions of Śaivism and is mentioned in texts such as \citetitle{tantraloka}, \citetitle{manthana} and \citetitle{netratantra}. The techniques were passed on, copied and recycled across the centuries among the yoga traditions of Haṭha- and Rājayoga. Besides Rāmacandra's text, the other texts which present full lists of the sixteen \textit{ādhāra}s are \textit{Netroddyota}-commentary of Kṣemarāja on \textit{Netratantra} 7.5; \citetitle{saradaavalon} 25.24-25; \citetitle{shivayogapradipika} 3.17-33; \citetitle{ssplonavla} 2.10-25; \citetitle{yogatarangini} 1.13 (Ed. p. 72-73) quotation with reference ``\textit{nityanāthapaddhatau}'' (maybe another recension of the \citetitle{ssplonavla}, see \citeauthor[2023: 149]{powell2023}); \citetitle{hathatattvakaumudi} 24.10-23 and 40.19; and \citetitle{jyotsna} on \citetitle{hathapradipika2024}, as well as \citetitle{ramatosana} (Ed. p. 839-841) quotation with reference ``\textit{yogasvarodaye}'' and \citetitle{yogakarnika} quotation with reference ``\textit{yogasvarodaye}'' 14-36. \textit{Haṭhasaṃketacandrikā} (cf. i.e. GOML R3239 f. 201 l. 20 - f. 204 ll. 5-6) directly quotes the \textit{Tattvayogabindu} without reference. Comparing the various lists of \textit{ādhāra}s reveals great variability. Rāmacandra's system draws from the \textit{Yogasvarodaya} and the \citetitle{ssplonavla}. When there are differences in the descriptions of the respective \textit{ādhāra}s among the texts I note them in the annotations without providing a reference again; for the Sanskrit, see the above-provided references.} are taught.%\footnote{Most of the previously mentioned \textit{cakra}s overlap with the \textit{ādhāra}s, except for the \textit{ākāśacakra}.}
+      
+     As a result of focusing on a light at the big toes of both feet, the gaze becomes steady.\footnote{In all previously mentioned systems, the big toe is the first \textit{ādhāra}. In most texts, the practitioner is instructed to fixate the mind onto the big toe - either one shall visualize a light there (as in \citetitle{shivayogapradipika}) or the light is already present. The \citetitle{saradaavalon}, however, instructs to fix \textit{prāṇa} in each \textit{ādhāra} listed. Here, the practice of the \textit{ādhāra}s is subsumed under the \textit{dhāraṇā}-limb of an eight-fold (\textit{aṣṭāṅga}) yoga system.}
+      
+     The root support is the second [one]. The heel of the back-foot is caused to be placed at the base of the big toe of the foot.\footnote{The base of the big toe of the foot (\textit{pādasyāṅguṣṭhamūla}) is probably the big toe joint of the foot or \textit{articulatio metatarsophalangealis hallucis}.} The fire is strengthened.
+     [In other words,] one heel is placed at the root support. The heel of the other foot is placed at the base of the big toe of this foot. The fire is kindled.\footnote{Rāmacandra combines the techniques presented in YSv and SSP for this \textit{ādhāra}, resulting in a \textit{siddhāsana}-like bodily position.}\fnsep\footnote{\textit{Netroddyota}, \citetitle{saradaavalon} and \citetitle{jyotsna} give the ankle (\textit{gulpha}) as the second \textit{ādhāra}.}
+
+      \flushpage 
+    \end{tlate}
+  \end{translation}
+\end{alignment}
+\pagebreak %after pp. 71-72
 \cleardoublepage
 \selectlanguage{english}
 \chapter{Appendix}
